@@ -52,7 +52,37 @@ public class StarTreeMapperTests extends MapperTestCase {
     }
 
     public void testValidStarTree() throws IOException {
-        MapperService mapperService = createMapperService(getExpandedMapping("status", "size"));
+        MapperService mapperService = createMapperService(getExpandedMappingWithJustAvg("status", "size"));
+        Set<CompositeMappedFieldType> compositeFieldTypes = mapperService.getCompositeFieldTypes();
+        for (CompositeMappedFieldType type : compositeFieldTypes) {
+            StarTreeMapper.StarTreeFieldType starTreeFieldType = (StarTreeMapper.StarTreeFieldType) type;
+            assertEquals(2, starTreeFieldType.getDimensions().size());
+            assertEquals("@timestamp", starTreeFieldType.getDimensions().get(0).getField());
+            assertTrue(starTreeFieldType.getDimensions().get(0) instanceof DateDimension);
+            DateDimension dateDim = (DateDimension) starTreeFieldType.getDimensions().get(0);
+            List<Rounding.DateTimeUnit> expectedTimeUnits = Arrays.asList(
+                Rounding.DateTimeUnit.DAY_OF_MONTH,
+                Rounding.DateTimeUnit.MONTH_OF_YEAR
+            );
+            assertEquals(expectedTimeUnits, dateDim.getIntervals());
+            assertEquals("status", starTreeFieldType.getDimensions().get(1).getField());
+            assertEquals(2, starTreeFieldType.getMetrics().size());
+            assertEquals("size", starTreeFieldType.getMetrics().get(0).getField());
+
+            // Assert COUNT and SUM gets added when AVG is defined
+            List<MetricStat> expectedMetrics = Arrays.asList(MetricStat.AVG, MetricStat.VALUE_COUNT, MetricStat.SUM);
+            assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(0).getMetrics());
+            assertEquals(100, starTreeFieldType.getStarTreeConfig().maxLeafDocs());
+            assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.OFF_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
+            assertEquals(
+                new HashSet<>(Arrays.asList("@timestamp", "status")),
+                starTreeFieldType.getStarTreeConfig().getSkipStarNodeCreationInDims()
+            );
+        }
+    }
+
+    public void testMetricsWithJustSum() throws IOException {
+        MapperService mapperService = createMapperService(getExpandedMappingWithJustSum("status", "size"));
         Set<CompositeMappedFieldType> compositeFieldTypes = mapperService.getCompositeFieldTypes();
         for (CompositeMappedFieldType type : compositeFieldTypes) {
             StarTreeMapper.StarTreeFieldType starTreeFieldType = (StarTreeMapper.StarTreeFieldType) type;
@@ -66,10 +96,45 @@ public class StarTreeMapperTests extends MapperTestCase {
             assertEquals(expectedTimeUnits, dateDim.getIntervals());
             assertEquals("status", starTreeFieldType.getDimensions().get(1).getField());
             assertEquals("size", starTreeFieldType.getMetrics().get(0).getField());
-            List<MetricStat> expectedMetrics = Arrays.asList(MetricStat.SUM, MetricStat.AVG);
+
+            // Assert AVG gets added when both of its base metrics is already present
+            List<MetricStat> expectedMetrics = List.of(MetricStat.SUM);
             assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(0).getMetrics());
             assertEquals(100, starTreeFieldType.getStarTreeConfig().maxLeafDocs());
-            assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.ON_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
+            assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.OFF_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
+            assertEquals(
+                new HashSet<>(Arrays.asList("@timestamp", "status")),
+                starTreeFieldType.getStarTreeConfig().getSkipStarNodeCreationInDims()
+            );
+        }
+    }
+
+    public void testMetricsWithCountAndSum() throws IOException {
+        MapperService mapperService = createMapperService(getExpandedMappingWithSumAndCount("status", "size"));
+        Set<CompositeMappedFieldType> compositeFieldTypes = mapperService.getCompositeFieldTypes();
+        for (CompositeMappedFieldType type : compositeFieldTypes) {
+            StarTreeMapper.StarTreeFieldType starTreeFieldType = (StarTreeMapper.StarTreeFieldType) type;
+            assertEquals("@timestamp", starTreeFieldType.getDimensions().get(0).getField());
+            assertTrue(starTreeFieldType.getDimensions().get(0) instanceof DateDimension);
+            DateDimension dateDim = (DateDimension) starTreeFieldType.getDimensions().get(0);
+            List<Rounding.DateTimeUnit> expectedTimeUnits = Arrays.asList(
+                Rounding.DateTimeUnit.DAY_OF_MONTH,
+                Rounding.DateTimeUnit.MONTH_OF_YEAR
+            );
+            assertEquals(expectedTimeUnits, dateDim.getIntervals());
+            assertEquals("status", starTreeFieldType.getDimensions().get(1).getField());
+            assertEquals("size", starTreeFieldType.getMetrics().get(0).getField());
+
+            // Assert AVG gets added when both of its base metrics is already present
+            List<MetricStat> expectedMetrics = List.of(MetricStat.SUM, MetricStat.VALUE_COUNT, MetricStat.AVG);
+            assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(0).getMetrics());
+
+            Metric metric = starTreeFieldType.getMetrics().get(1);
+            assertEquals("_doc_count", metric.getField());
+            assertEquals(List.of(MetricStat.DOC_COUNT), metric.getMetrics());
+
+            assertEquals(100, starTreeFieldType.getStarTreeConfig().maxLeafDocs());
+            assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.OFF_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
             assertEquals(
                 new HashSet<>(Arrays.asList("@timestamp", "status")),
                 starTreeFieldType.getStarTreeConfig().getSkipStarNodeCreationInDims()
@@ -91,17 +156,19 @@ public class StarTreeMapperTests extends MapperTestCase {
             );
             assertEquals(expectedTimeUnits, dateDim.getIntervals());
             assertEquals("status", starTreeFieldType.getDimensions().get(1).getField());
+            assertEquals(3, starTreeFieldType.getMetrics().size());
             assertEquals("status", starTreeFieldType.getMetrics().get(0).getField());
-            List<MetricStat> expectedMetrics = Arrays.asList(
-                MetricStat.AVG,
-                MetricStat.COUNT,
-                MetricStat.SUM,
-                MetricStat.MAX,
-                MetricStat.MIN
-            );
+            List<MetricStat> expectedMetrics = Arrays.asList(MetricStat.VALUE_COUNT, MetricStat.SUM, MetricStat.AVG);
             assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(0).getMetrics());
+
+            assertEquals("metric_field", starTreeFieldType.getMetrics().get(1).getField());
+            expectedMetrics = Arrays.asList(MetricStat.VALUE_COUNT, MetricStat.SUM, MetricStat.AVG);
+            assertEquals(expectedMetrics, starTreeFieldType.getMetrics().get(1).getMetrics());
+            Metric metric = starTreeFieldType.getMetrics().get(2);
+            assertEquals("_doc_count", metric.getField());
+            assertEquals(List.of(MetricStat.DOC_COUNT), metric.getMetrics());
             assertEquals(10000, starTreeFieldType.getStarTreeConfig().maxLeafDocs());
-            assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.ON_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
+            assertEquals(StarTreeFieldConfiguration.StarTreeBuildMode.OFF_HEAP, starTreeFieldType.getStarTreeConfig().getBuildMode());
             assertEquals(Collections.emptySet(), starTreeFieldType.getStarTreeConfig().getSkipStarNodeCreationInDims());
         }
     }
@@ -109,7 +176,7 @@ public class StarTreeMapperTests extends MapperTestCase {
     public void testInvalidDim() {
         MapperParsingException ex = expectThrows(
             MapperParsingException.class,
-            () -> createMapperService(getExpandedMapping("invalid", "size"))
+            () -> createMapperService(getExpandedMappingWithJustAvg("invalid", "size"))
         );
         assertEquals("Failed to parse mapping [_doc]: unknown dimension field [invalid]", ex.getMessage());
     }
@@ -117,7 +184,7 @@ public class StarTreeMapperTests extends MapperTestCase {
     public void testInvalidMetric() {
         MapperParsingException ex = expectThrows(
             MapperParsingException.class,
-            () -> createMapperService(getExpandedMapping("status", "invalid"))
+            () -> createMapperService(getExpandedMappingWithJustAvg("status", "invalid"))
         );
         assertEquals("Failed to parse mapping [_doc]: unknown metric field [invalid]", ex.getMessage());
     }
@@ -136,7 +203,7 @@ public class StarTreeMapperTests extends MapperTestCase {
     public void testInvalidParam() {
         MapperParsingException ex = expectThrows(
             MapperParsingException.class,
-            () -> createMapperService(getInvalidMapping(false, false, false, false, true))
+            () -> createMapperService(getInvalidMapping(false, false, false, false, true, false))
         );
         assertEquals(
             "Failed to parse mapping [_doc]: Star tree mapping definition has unsupported parameters:  [invalid : {invalid=invalid}]",
@@ -182,6 +249,14 @@ public class StarTreeMapperTests extends MapperTestCase {
         );
     }
 
+    public void testInvalidMetricTypeWithDocCount() {
+        MapperParsingException ex = expectThrows(
+            MapperParsingException.class,
+            () -> createMapperService(getInvalidMapping(false, false, false, false, false, true))
+        );
+        assertEquals("Failed to parse mapping [_doc]: Invalid metric stat: _doc_count", ex.getMessage());
+    }
+
     public void testInvalidDimType() {
         MapperParsingException ex = expectThrows(
             MapperParsingException.class,
@@ -223,15 +298,18 @@ public class StarTreeMapperTests extends MapperTestCase {
         assertEquals(metric1, metric2);
         List<MetricStat> m2 = new ArrayList<>();
         m2.add(MetricStat.MAX);
-        m2.add(MetricStat.COUNT);
+        m2.add(MetricStat.VALUE_COUNT);
         metric2 = new Metric("name", m2);
         assertNotEquals(metric1, metric2);
 
-        assertEquals(MetricStat.COUNT, MetricStat.fromTypeName("count"));
+        assertEquals(MetricStat.VALUE_COUNT, MetricStat.fromTypeName("value_count"));
         assertEquals(MetricStat.MAX, MetricStat.fromTypeName("max"));
         assertEquals(MetricStat.MIN, MetricStat.fromTypeName("min"));
         assertEquals(MetricStat.SUM, MetricStat.fromTypeName("sum"));
         assertEquals(MetricStat.AVG, MetricStat.fromTypeName("avg"));
+
+        assertEquals(List.of(MetricStat.VALUE_COUNT, MetricStat.SUM), MetricStat.AVG.getBaseMetrics());
+
         IllegalArgumentException ex = expectThrows(IllegalArgumentException.class, () -> MetricStat.fromTypeName("invalid"));
         assertEquals("Invalid metric stat: invalid", ex.getMessage());
     }
@@ -310,7 +388,7 @@ public class StarTreeMapperTests extends MapperTestCase {
     }
 
     public void testValidations() throws IOException {
-        MapperService mapperService = createMapperService(getExpandedMapping("status", "size"));
+        MapperService mapperService = createMapperService(getExpandedMappingWithJustAvg("status", "size"));
         Settings settings = Settings.builder().put(CompositeIndexSettings.STAR_TREE_INDEX_ENABLED_SETTING.getKey(), true).build();
         CompositeIndexSettings enabledCompositeIndexSettings = new CompositeIndexSettings(
             settings,
@@ -370,7 +448,57 @@ public class StarTreeMapperTests extends MapperTestCase {
         );
     }
 
-    private XContentBuilder getExpandedMapping(String dim, String metric) throws IOException {
+    private XContentBuilder getExpandedMappingWithJustAvg(String dim, String metric) throws IOException {
+        return topMapping(b -> {
+            b.startObject("composite");
+            b.startObject("startree");
+            b.field("type", "star_tree");
+            b.startObject("config");
+            b.field("max_leaf_docs", 100);
+            b.startArray("skip_star_node_creation_for_dimensions");
+            {
+                b.value("@timestamp");
+                b.value("status");
+            }
+            b.endArray();
+            b.startArray("ordered_dimensions");
+            b.startObject();
+            b.field("name", "@timestamp");
+            b.startArray("calendar_intervals");
+            b.value("day");
+            b.value("month");
+            b.endArray();
+            b.endObject();
+            b.startObject();
+            b.field("name", dim);
+            b.endObject();
+            b.endArray();
+            b.startArray("metrics");
+            b.startObject();
+            b.field("name", metric);
+            b.startArray("stats");
+            b.value("avg");
+            b.endArray();
+            b.endObject();
+            b.endArray();
+            b.endObject();
+            b.endObject();
+            b.endObject();
+            b.startObject("properties");
+            b.startObject("@timestamp");
+            b.field("type", "date");
+            b.endObject();
+            b.startObject("status");
+            b.field("type", "integer");
+            b.endObject();
+            b.startObject("size");
+            b.field("type", "integer");
+            b.endObject();
+            b.endObject();
+        });
+    }
+
+    private XContentBuilder getExpandedMappingWithJustSum(String dim, String metric) throws IOException {
         return topMapping(b -> {
             b.startObject("composite");
             b.startObject("startree");
@@ -400,7 +528,57 @@ public class StarTreeMapperTests extends MapperTestCase {
             b.field("name", metric);
             b.startArray("stats");
             b.value("sum");
-            b.value("avg");
+            b.endArray();
+            b.endObject();
+            b.endArray();
+            b.endObject();
+            b.endObject();
+            b.endObject();
+            b.startObject("properties");
+            b.startObject("@timestamp");
+            b.field("type", "date");
+            b.endObject();
+            b.startObject("status");
+            b.field("type", "integer");
+            b.endObject();
+            b.startObject("size");
+            b.field("type", "integer");
+            b.endObject();
+            b.endObject();
+        });
+    }
+
+    private XContentBuilder getExpandedMappingWithSumAndCount(String dim, String metric) throws IOException {
+        return topMapping(b -> {
+            b.startObject("composite");
+            b.startObject("startree");
+            b.field("type", "star_tree");
+            b.startObject("config");
+            b.field("max_leaf_docs", 100);
+            b.startArray("skip_star_node_creation_for_dimensions");
+            {
+                b.value("@timestamp");
+                b.value("status");
+            }
+            b.endArray();
+            b.startArray("ordered_dimensions");
+            b.startObject();
+            b.field("name", "@timestamp");
+            b.startArray("calendar_intervals");
+            b.value("day");
+            b.value("month");
+            b.endArray();
+            b.endObject();
+            b.startObject();
+            b.field("name", dim);
+            b.endObject();
+            b.endArray();
+            b.startArray("metrics");
+            b.startObject();
+            b.field("name", metric);
+            b.startArray("stats");
+            b.value("sum");
+            b.value("value_count");
             b.endArray();
             b.endObject();
             b.endArray();
@@ -546,7 +724,8 @@ public class StarTreeMapperTests extends MapperTestCase {
         boolean invalidSkipDims,
         boolean invalidDimType,
         boolean invalidMetricType,
-        boolean invalidParam
+        boolean invalidParam,
+        boolean invalidDocCountMetricType
     ) throws IOException {
         return topMapping(b -> {
             b.startObject("composite");
@@ -583,6 +762,12 @@ public class StarTreeMapperTests extends MapperTestCase {
             b.endObject();
             b.startObject();
             b.field("name", "metric_field");
+            if (invalidDocCountMetricType) {
+                b.startArray("stats");
+                b.value("_doc_count");
+                b.value("avg");
+                b.endArray();
+            }
             b.endObject();
             b.endArray();
             b.endObject();
@@ -681,7 +866,7 @@ public class StarTreeMapperTests extends MapperTestCase {
 
     private XContentBuilder getInvalidMapping(boolean singleDim, boolean invalidSkipDims, boolean invalidDimType, boolean invalidMetricType)
         throws IOException {
-        return getInvalidMapping(singleDim, invalidSkipDims, invalidDimType, invalidMetricType, false);
+        return getInvalidMapping(singleDim, invalidSkipDims, invalidDimType, invalidMetricType, false, false);
     }
 
     protected boolean supportsOrIgnoresBoost() {
